[gd_scene load_steps=5 format=3 uid="uid://4crjqwm5ifhs"]

[ext_resource type="Script" uid="uid://djco0ltb18wit" path="res://Scripts/Enemy2ShotScript.gd" id="1_0t1c4"]
[ext_resource type="Texture2D" uid="uid://de3oy5xjulgs8" path="res://Textures/enemy 3 shot.png" id="1_avwur"]
[ext_resource type="Script" uid="uid://buqt0ou6cf8x7" path="res://Scripts/HitboxScript.gd" id="2_0t1c4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvnfk"]
radius = 7.2111

[node name="enemy 3 shot" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_0t1c4")
speed = 120

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_avwur")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5
script = ExtResource("2_0t1c4")
team = 1
damage = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
visible = false
shape = SubResource("CircleShape2D_cvnfk")

[node name="deathtimer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="was_hit" from="hitbox" to="." method="_on_hitbox_was_hit"]
[connection signal="timeout" from="deathtimer" to="." method="queue_free"]
