[gd_scene load_steps=4 format=3 uid="uid://dys32k8d10uat"]

[ext_resource type="Script" uid="uid://buqt0ou6cf8x7" path="res://Scripts/HitboxScript.gd" id="1_68yox"]
[ext_resource type="Script" uid="uid://b2at8ixb76fli" path="res://Scripts/pandora/SwordsScript.gd" id="1_dftmn"]
[ext_resource type="Texture2D" uid="uid://ds2yrr2xhykp" path="res://Textures/pandora/summoned sword.png" id="1_v3wob"]

[node name="swords" type="CharacterBody2D"]
script = ExtResource("1_dftmn")

[node name="hitbox" type="Area2D" parent="." node_paths=PackedStringArray("die_on_hit")]
position = Vector2(0, -51)
collision_layer = 4
collision_mask = 10
script = ExtResource("1_68yox")
damage = 3
die_on_hit = NodePath(".")

[node name="sprite" type="Sprite2D" parent="hitbox"]
texture = ExtResource("1_v3wob")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hitbox"]
polygon = PackedVector2Array(-7, -23, -1, -29, 1, -29, 7, -23, 13, 4, 14, 17, 4, 28, -4, 28, -14, 17, -13, 4)

[connection signal="was_hit" from="hitbox" to="hitbox" method="_on_was_hit"]
